--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "colors": "^1.0.3",
-    "eslint": "^1.5.1",
+    "eslint": "^2.7.0",
     "eslint-plugin-html": "^1.0.4",
     "fs-readdir-recursive": "^1.0.0",
     "http-server": "^0.8.0",
@@ -79,7 +79,7 @@
     "test-karma-worker": "karma start test/karma-webworker.conf.js",
     "test-browser-old": "node ./test/browser-runner",
     "test-browser": "npm run test-karma && npm run test-karma-worker && npm run test-browser-old",
-    "lint": "jscs lib/ && jscs test/ && eslint . && eslint test/web-platform-tests/to-upstream --ext .html",
+    "lint": "eslint . && eslint test/web-platform-tests/to-upstream --ext .html",
     "update-authors": "git log --format=\"%aN <%aE>\" | sort -f | uniq > AUTHORS.txt",
     "benchmark": "node ./benchmark/runner",
     "benchmark-browser": "node ./benchmark/runner --bundle",
